<resources>
    <string name="app_name">Tapstory</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered? Login here.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="button">Check Previous Taps</string>
    <string name="taps">Begin a New Tap by Tapping Your Phone to an NFC Tag.</string>
    <string name="title_activity_new_tap">NewTap</string>
    <string name="to">to</string>
    <string name="total">Total Number of Taps:</string>
    <string name="places">Total Number of Places:</string>
    <string name="viewPlaces">Click here to view places tapped.</string>
    <string name="thePlaces">You have tapped the following places:</string>
    <string name="divider">---------------------------------------------------------------------------------------</string>
</resources>
