<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login">

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/btn_logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingBottom="@dimen/logo_padding"
        android:src="@drawable/textlogowhite"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:id="@+id/textView"
        android:layout_marginTop="52dp"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textColor="@color/white"
        android:id="@+id/textView3"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:text="@string/button"
        android:textAllCaps="false"
        android:onClick="checkTaps"
        android:layout_marginBottom="5dp"
        android:layout_above="@+id/btnLogout"/>



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="78dp">

        <TextView
            android:id="@+id/email"
            android:textColor="@color/bg_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/taps"
            android:id="@+id/textView2"
            android:textColor="@color/input_login"
            android:layout_alignBottom="@+id/button"
            android:layout_alignEnd="@+id/linearLayout"
            android:layout_toEndOf="@+id/name"/>

    </LinearLayout>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/lbl_name"
        android:textSize="24sp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp" />

</RelativeLayout>
