<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_check_taps"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.osu.tapstory.CheckTaps"
    android:background="@color/input_login_hint">


    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:text="@string/total"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:textColor="@color/input_login"/>
            <TextView
                android:id="@+id/totalTaps"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_column="2"
                android:text=""
                android:textColor="@color/input_login"
                />
        </TableRow>
        <TableRow
            android:layout_height="fill_parent"
            android:layout_width="fill_parent">
        <TextView
            android:text=""
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:textColor="@color/input_login"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:text="@string/places"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:textColor="@color/input_login"/>
            <TextView
                android:id="@+id/totalPlaces"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="2"
                android:text=""
                android:textColor="@color/input_login"/>
        </TableRow>
        <TableRow
            android:layout_height="fill_parent"
            android:layout_width="fill_parent">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:text="@string/viewPlaces"
                android:layout_column="1"
                android:background="@null"
                android:onClick="toPlaces"/>

        </TableRow>
    </TableLayout>

</RelativeLayout>
